@@ -1,2 +1,3 @@
 export( plotBIBI )
-export(readScoringXls)
+export( readScoringXls )
+export( lfpskLoadQualityData )
