@@ -4,3 +4,7 @@ lfpstreamkeepers
 R Data package for Lake Forest Park StreamKeepers
 
 See setupandrun.R for rough usage examples.
+
+See http://www.lfpstreamkeepers.org for more details.
+
+ObsoleteWebSite is here because that is where the data was stored pre 2012.
